blocks/v2-truck-builder/v2-truck-builder.css
.v2-truck-builder {
  --truck-builder-container-margin: 16px;

  margin: 0 calc(var(--truck-builder-container-margin) * -1);
  overflow-x: clip;
}

.section > .v2-truck-builder-wrapper.full-width {
  padding: 0 16px;
}

.v2-truck-builder__header-container {
  padding: var(--section-div-padding);
}

/* TODO: apply to all H2 */
.v2-truck-builder__header-container h2 {
  font-family: var(--ff-headline-medium);
}

.v2-truck-builder__accordion-container {
  position: relative;
}

.v2-truck-builder__items-container {
  display: flex;
  flex: none;
  overflow: auto;
  flex-flow: row nowrap;
  scroll-snap-type: x mandatory;
  gap: 0;
  scroll-behavior: smooth;
  -ms-overflow-style: none;
  scrollbar-width: none;
}

.v2-truck-builder__items-container::-webkit-scrollbar {
  display: none;
}

.v2-truck-builder__items-container::before,
.v2-truck-builder__items-container::after {
  content: '';
  display: block;
  flex: 0 0 calc(var(--truck-builder-container-margin) / 2);
  min-height: 1px;
}

.v2-truck-builder__item {
  --item-color: var(--text-subtle);

  scroll-snap-align: start;
  flex: none;
  width: calc(100vw - (var(--truck-builder-container-margin) * 2));
  padding: 0 0 16px 16px;
  display: flex;
  flex-direction: column;
  color: var(--item-color);
}

.v2-truck-builder__item,
.v2-truck-builder__item .v2-truck-builder__item-title,
.v2-truck-builder__item .v2-truck-builder__item-description {
  transition: color var(--easing-standard) var(--duration-medium)!important;
}

.v2-truck-builder__item.active {
  --item-color: var(--text-color);
}

.v2-truck-builder__item-header-button {
  background: transparent;
  border: 0;
  display: flex;
  justify-content: space-between;
  margin: var(--truck-builder-container-margin) 0 0;
  margin: 16px 0 0;
  padding: 24px 0 0;
  order: 2;
  position: relative;
}

.v2-truck-builder__item-header-button:hover,
.v2-truck-builder__item-header-button:focus {
  outline: 0;
  background: transparent;
  cursor: pointer;
}

.v2-truck-builder__item-header-button:focus-visible {
  outline: 2px solid var(--c-accent-red);
  outline-offset: 2px;
}

.v2-truck-builder__item .v2-truck-builder__item-header-button {
  color: var(--item-color);
}

.v2-truck-builder__item .v2-truck-builder__item-header-button::before {
  content: '';
  width: 100%;
  height: 1px;
  position: absolute;
  top: 0;
  background-color: var(--text-subtle);
  transition:
    transform var(--easing-exit) var(--duration-small),
    background-color var(--easing-exit) var(--duration-small) var(--duration-small);
}

.v2-truck-builder__item.active .v2-truck-builder__item-header-button::before {
  transform: scaleY(4);
  background-color: var(--text-color);
}

/* stylelint-disable-next-line no-descending-specificity */
.v2-truck-builder__item-title {
  font-family: var(--ff-subheadings-medium);
  font-size: var(--headline-5-font-size);
  letter-spacing: 0.036em;
  line-height: var(--headline-1-line-height);
  margin: 0;
  width: 100%;
  text-align: left;
}

/* stylelint-disable-next-line no-descending-specificity */
.v2-truck-builder__item-description {
  order: 3;
  padding: 16px 0 8px;
}

.v2-truck-builder__item-description > p {
  margin: 0;
  text-wrap: balance;
  font-size: var(--body-font-size-xxs);
}

.v2-truck-builder__item-image {
  order: 1;
  position: relative;
  z-index: 2;
  width: 100vw;
  height: 100vw;
  max-height: 512px;
  max-width: 512px;
  display: flex;
  align-items: center;
  aspect-ratio: 16/9;
  margin-left: -24px;
}

/* fix to show image in Sidekick Library */
.v2-truck-builder__item-image picture {
  width: 100%;
  height: 100%;
}

.v2-truck-builder__item-image img {
  width: 100%;
  height: auto;
  max-height: 512px;
  display: block;
}

.v2-truck-builder .button-container {
  padding: 0 16px;
}

.v2-truck-builder .button-container .v2-truck-builder__builder-button {
  width: 100%;
  margin: 0;
}

.v2-truck-builder__bg-image {
  position: absolute;
  top: 0;
  left: -50vw;
  z-index: 1;
  aspect-ratio: 1;
  height: 100vw;
  max-height: 512px;
  max-width: 512px;
}

.v2-truck-builder--media-right .v2-truck-builder__bg-image {
  right: -50vw;
  left: unset;
}

@media (min-width: 512px) {
  .v2-truck-builder__bg-image {
    left: calc(-256px + ((256 / 398) * (100vw - 512px)));
  }

  .v2-truck-builder--media-right .v2-truck-builder__bg-image {
    right: calc(-256px + ((256 / 398) * (100vw - 512px)));
  }

  .v2-truck-builder__item-image {
    max-width: none;
    width: auto;
  }
}

@media (min-width: 910px) {
  .v2-truck-builder__bg-image {
    left: 0;
  }

  .v2-truck-builder--media-right .v2-truck-builder__bg-image {
    right: 0;
    left: unset;
  }
}

@media (min-width: 1200px) {
  .section.v2-truck-builder-container {
    height: 780px;
  }

  .section > .v2-truck-builder-wrapper.full-width {
    max-width: 1440px;
    margin: 0 auto;
    position: relative;
  }

  .v2-truck-builder__header-container {
    max-width: var(--wrapper-width);
    margin: 0 auto 4em;
  }

  .v2-truck-builder__header-container h2 {
    font-size: var(--headline-1-font-size);
  }

  .v2-truck-builder__accordion-container {
    display: flex;
    flex-flow: column;
    align-items: flex-end;
    max-width: var(--wrapper-width);
    margin: 0 auto;
  }

  .v2-truck-builder--media-right .v2-truck-builder__accordion-container {
    align-items: flex-start;
  }

  .v2-truck-builder__items-container {
    flex-direction: column;
    align-items: flex-end;
    margin: 0;
    overflow: visible;
    gap: 8px;
    width: calc(1040px - (910px - 200px));
    flex: 1 0 50%;
  }

  .v2-truck-builder__items-container::before,
  .v2-truck-builder__items-container::after {
    display: none;
  }

  .v2-truck-builder__items-container > div {
    width: 100%;
  }

  .v2-truck-builder__item {
    margin: 0;
    padding-left: 0;
    min-width: unset;
  }

  .v2-truck-builder__item:has(:focus-visible) {
    outline: 2px solid var(--c-accent-red);
    outline-offset: 2px;
  }

  .v2-truck-builder__item-header-button {
    margin: 0;
  }

  .v2-truck-builder__item-header-button:focus-visible {
    outline: 0;
  }

  .v2-truck-builder__item-image {
    position: absolute;
    left: -200px;
    top: 0;
    width: auto;
    max-width: none;
  }

  .v2-truck-builder--media-right .v2-truck-builder__item-image {
    right: -200px;
    left: unset;
  }

  .v2-truck-builder__item:not(.active) .v2-truck-builder__item-image,
  .v2-truck-builder--hide-description .v2-truck-builder__item:not(.active) .v2-truck-builder__item-description {
    display: none;
  }

  .v2-truck-builder__item-header-button .v2-truck-builder__item-title {
    margin: 0;
  }

  .v2-truck-builder__item-description > p {
    text-wrap: unset;
  }

  .v2-truck-builder .button-container {
    padding: 2px 0 0;
  }

  .v2-truck-builder .button-container .v2-truck-builder__builder-button {
    width: calc(1040px - (910px - 200px));
    margin: 0;
  }

  .v2-truck-builder__bg-image {
    left: -200px; /* (1440px - 1040px) / 2 */
  }

  .v2-truck-builder--media-right .v2-truck-builder__bg-image {
    right: -200px;
    left: unset;
  }
}

